Upgrage pkg and patch (temp)

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@w3t-ab/sqeave",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "A squint-cljs based solid-js framework for building SPAs borrowing ideas from Fulcro",
   "author": "W3T AB",
   "license": "EPL",
@@ -26,10 +26,10 @@
   "dependencies": {
     "lodash": "^4.17.21",
     "solid-js": "^1.9.3",
-    "squint-cljs": "^0.7.111"
+    "squint-cljs": "^0.8.123"
   },
   "devDependencies": {
-    "vite": "latest"
+    "vite": "^5.4.11"
   },
   "keywords": [
     "vite",
@@ -49,5 +49,10 @@
   "bugs": {
     "url": "https://github.com/w3t_ab/sqeave/issues"
   },
-  "homepage": "https://github.com/w3t_ab/sqeave#readme"
+  "homepage": "https://github.com/w3t_ab/sqeave#readme",
+  "pnpm": {
+    "patchedDependencies": {
+      "squint-cljs@0.8.123": "patches/squint-cljs@0.8.123.patch"
+    }
+  }
 }
