--- a/template/package.json
+++ b/template/package.json
@@ -7,10 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC",
+  "license": "EPL",
   "description": "",
   "devDependencies": {
-    "@w3t-ab/sqeave": "^0.0.3",
+    "@w3t-ab/sqeave": "^0.0.4",
     "@w3t-ab/vite-plugin-squint": "github:w3t-se/vite-plugin-squint#7a0b232bdd889ac604ebb88d4d9be08239dae632",
     "squint-cljs": "^0.8.123",
     "vite": "^5.4.11",
