--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@w3t-ab/sqeave",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "A squint-cljs based solid-js framework for building SPAs borrowing ideas from Fulcro",
   "author": "W3T AB",
   "license": "EPL",
@@ -9,14 +9,15 @@
     "url": "git+https://github.com/w3t_ab/sqeave.git"
   },
   "type": "module",
+  "module": "index.mjs",
   "files": [
     "dist",
-    "src/main/comp.cljs",
-    "src/main/comp.cljc",
-    "src/main/utils.cljs",
-    "src/main/transact.cljs",
-    "src/main/normad.cljs",
-    "index.js",
+    "src/main/w3t-se/sqeave/comp.cljs",
+    "src/main/w3t-se/sqeave/sqeave.cljc",
+    "src/main/w3t-se/sqeave/utils.cljs",
+    "src/main/w3t-se/sqeave/transact.cljs",
+    "src/main/w3t-se/sqeave/normad.cljs",
+    "index.mjs",
     "comp.js",
     "utils.js",
     "transact.js",
@@ -26,10 +27,10 @@
   "dependencies": {
     "lodash": "^4.17.21",
     "solid-js": "^1.9.3",
-    "squint-cljs": "^0.8.123"
+    "squint-cljs": "^0.8.128"
   },
   "devDependencies": {
-    "vite": "^5.4.11"
+    "vite": "^6.0.2"
   },
   "keywords": [
     "vite",
@@ -39,20 +40,14 @@
     "squint-cljs"
   ],
   "exports": {
-    ".": "./index.js",
+    ".": "./index.mjs",
     "./comp": "./comp.js",
     "./normad": "./normad.js",
     "./utils": "./utils.js",
     "./transact": "./transact.js"
   },
-  "main": "index.js",
   "bugs": {
     "url": "https://github.com/w3t_ab/sqeave/issues"
   },
-  "homepage": "https://github.com/w3t_ab/sqeave#readme",
-  "pnpm": {
-    "patchedDependencies": {
-      "squint-cljs@0.8.123": "patches/squint-cljs@0.8.123.patch"
-    }
-  }
+  "homepage": "https://github.com/w3t_ab/sqeave#readme"
 }
