--- a/template/package.json
+++ b/template/package.json
@@ -10,16 +10,11 @@
   "license": "EPL",
   "description": "",
   "devDependencies": {
-    "@w3t-ab/sqeave": "^0.0.4",
-    "@w3t-ab/vite-plugin-squint": "github:w3t-se/vite-plugin-squint#7a0b232bdd889ac604ebb88d4d9be08239dae632",
-    "squint-cljs": "^0.8.123",
-    "vite": "^5.4.11",
-    "vite-plugin-solid": "^2.10.2"
-  },
-  "pnpm": {
-    "patchedDependencies": {
-      "squint-cljs@0.8.123": "patches/squint-cljs@0.8.123.patch"
-    }
+    "@w3t-ab/sqeave": "file:../",
+    "@w3t-ab/vite-plugin-squint": "^0.0.5",
+    "squint-cljs": "^0.8.128",
+    "vite": "^6.0.2",
+    "vite-plugin-solid": "^2.11.0"
   },
   "dependencies": {
     "solid-js": "^1.9.3"
