--- a/create-sqeave/template/package.json
+++ b/create-sqeave/template/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "template",
+  "name": "sqeave-app",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
@@ -10,7 +10,7 @@
   "license": "EPL",
   "description": "",
   "devDependencies": {
-    "@w3t-ab/sqeave": "^0.0.8",
+    "@w3t-ab/sqeave": "^0.0.9",
     "@w3t-ab/vite-plugin-squint": "^0.0.5",
     "squint-cljs": "^0.8.129",
     "vite": "^6.0.2",
