--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@w3t-ab/sqeave",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "A squint-cljs based solid-js framework for building SPAs borrowing ideas from Fulcro.",
   "author": "W3T AB",
   "license": "EPL",
@@ -22,11 +22,12 @@
   "scripts": {},
   "dependencies": {
     "lodash": "^4.17.21",
-    "solid-js": "^1.9.3",
-    "squint-cljs": "^0.8.128"
+    "loglevel": "^1.9.2",
+    "solid-js": "^1.9.3"
   },
   "devDependencies": {
-    "vite": "^6.0.2"
+    "vite": "^6.0.2",
+    "squint-cljs": "^0.8.128"
   },
   "keywords": [
     "vite",
