--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@w3t-ab/sqeave",
-  "version": "0.0.9",
+  "version": "0.1.0",
   "description": "A squint-cljs based solid-js framework for building SPAs borrowing ideas from Fulcro.",
   "author": "W3T AB",
   "license": "EPL",
@@ -26,8 +26,8 @@
     "solid-js": "^1.9.3"
   },
   "devDependencies": {
-    "vite": "^6.0.2",
-    "squint-cljs": "^0.8.128"
+    "squint-cljs": "^0.8.129",
+    "vite": "^6.0.3"
   },
   "keywords": [
     "vite",
